# audiobook

./: .env.example  .gitignore  pyproject.toml
.claude/skills/generating-audiobook-video/: SKILL.md
config/: tropes.yaml  voice.yaml
docs/superpowers/plans/: 2026-07-21-flux-images-module.md  2026-07-21-tts-module.md  (+5 more)
images/: cli.py  generator.py  scene_prompt.py  storage.py  style.py
metadata/: chapters.py  cli.py  filename.py  seo_generator.py  storage.py
remotion/: package-lock.json  package.json
remotion/src/: Avatar.tsx  Caption.tsx  ChapterBackground.tsx  MainVideo.tsx  Root.tsx  Waveform.tsx  types.ts
scripts/: cli.py  generator.py  models.py  prompts.py  qa.py  storage.py  trope_bank.py
tests/images/: test_cli.py  test_generator.py  test_scene_prompt.py  test_storage.py
tests/metadata/: test_chapters.py  test_cli.py  test_filename.py  test_seo_generator.py  test_storage.py
tests/scripts/: test_cli.py  test_generator.py  test_models.py  test_prompts.py  test_qa.py  test_storage.py  test_trope_bank.py
tests/thumbnail/: test_cli.py  test_compositor.py  test_generator.py  test_prompt_generator.py  test_storage.py
tests/tts/: test_audio_postprocess.py  test_cli.py  test_merge_cli.py  test_storage.py  test_synthesizer.py  test_voice_profile.py
tests/video/: test_cli.py  test_props_builder.py  test_storage.py
thumbnail/: cli.py  compositor.py  generator.py  prompt_generator.py  storage.py  style.py
tts/: audio_postprocess.py  cli.py  merge_cli.py  storage.py  synthesizer.py  voice_profile.py
video/: cli.py  props_builder.py  storage.py
(+7 files in other folders)
